# StellarYield

./: CONTRIBUTING.md  issue.md  pr.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/keepers/src/: index.ts
backend/mpc_nodes/coordinator/: hardened_ceremony.go
backend/rewards/src/: merkleTree.ts
client/: .env.example  vite.config.ts
client/src/: App.tsx
client/src/__tests__/: api-backend-missing.test.tsx
client/src/components/: BackendUnavailable.test.tsx  BackendUnavailable.tsx  (+4 more)
contracts/: Cargo.toml  ERROR_CODES.md  package-lock.json  package.json  registryDiff.ts
contracts/__tests__/: generateManifest.test.ts  registryDiff.test.ts  verifyManifest.test.ts
contracts/bridge_relayer/: Cargo.toml
contracts/bridge_relayer/src/: lib.rs  replay.rs
contracts/bridge_relayer/tests/: test_authorization_and_replay.rs  test_replay.rs
contracts/scripts/: README.md  deployment-manifest.example.json  verify-manifest.js
contracts/yield_vault/: STORAGE_HARDENING.md
docs/: BALANCE.md  backend_testing.md  contributor-guide.md  frontend-env-reference.md  release-checklist.md  triage-process.md
scripts/: check-env-vars.js  check-frontend-env.js  issue-triage.js  maintainer_saved_searches.sh  validate-workspace.js
server/: jest.config.ts  openapi.yaml  package-lock.json  package.json
server/scripts/: check-openapi-drift.ts
server/src/: app.ts
shared/: settlement-payload-schema.json
shared/test-fixtures/: reconciliationFixtures.ts  simulatorFixtures.ts
shared/types/: rebalanceEvent.test.ts  rebalanceEvent.ts  watchlist.ts
(+154 files in other folders)
