[package]
name = "bridge_relayer"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
sha3 = "0.10.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.4.0"

[[test]]
name = "test_replay"
path = "tests/test_replay.rs"

[[test]]
name = "test_basic"
path = "tests/test_basic.rs"
